bugFix: alignment

--- a/src/css/resume_stylesheet.css
+++ b/src/css/resume_stylesheet.css
@@ -68,7 +68,7 @@ body {
     padding: 10px;
     max-width: 100%;
     width: 100%;
-    margin-left: 12%;
+    margin-left: 8%;
 }
 
 .body-main{
